Rapidfire bug fixes
Speedrun time: like 3 hours
Did I set a world record? Yes. I set a record for completing these 10 specific bugs on vocabustudy

* Set creation btn is no longer underlined
* Set names don't overflow
* Comments don't overflow
* Ratelimit for save set button
* Creator tooltips don't overflow
* Set detail page doesn't have "Loading" text anymore (spinner better)
* Descriptions no longer overflow set detail
* Test works when removing/adding categories
* Test sidebar no longer overflows

--- a/src/css/bulma-styles.scss
+++ b/src/css/bulma-styles.scss
@@ -157,3 +157,6 @@ a:visited.dropdown-item {
 input[type="text"] {
     transition: 0.1s border-color;
 }
+[data-tooltip]::before {
+    max-width: 80vw;
+}
